--- a/documentdesign.html
+++ b/documentdesign.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
 
     
 
@@ -200,7 +200,7 @@
                     <div class="card-box">
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">8-9 page Responsive Website (built with Mobirise) Mobile, Tablet and Desktop friendly</h4>
-                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-5">£160</p>
+                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-5">£320</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style display-7">Delivered for you to review on a test URL within 48 hours.&nbsp;</p>
@@ -214,7 +214,7 @@
                     <div class="card-box">
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">12 page Responsive Website (built with Mobirise) Mobile, Tablet and Desktop friendly</h4>
-                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-5">£320</p>
+                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-5">£480</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style display-7">
@@ -229,7 +229,7 @@
                     <div class="card-box">
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">Hosting Website</h4>
-                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-7">Cost Price + 20%</p>
+                            <p class="mbr-text card-title cost mbr-fonts-style m-0 display-7">Cost Price <br>+ £160</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style display-7">Arranging the hosting, purchase of domain name of your choice, putting your site live.</p>
