--- a/duckandperiwinkle.html
+++ b/duckandperiwinkle.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="footers" class="cid-rRpiIrNXIy" id="footer6-2w">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section once="footers" class="cid-rRpiIrNXIy" id="footer6-2w">
 
     
 
@@ -102,40 +102,40 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/duck-periwinkle-images-for-giving-iom-676x676.png" alt="Mobirise" title="">
+                        <img src="assets/images/duck-at-slimbridge-website-676x451.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Duck at Slimbridge</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available to order soon.</p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Duck at Slimbridge</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary display-4">Order</a></div>
+                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
                 </div>
             </div>
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/imag1758-676x502.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/isle-of-man-sunset-website-676x451.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Isle of Man Sunset</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br><br>Available to order soon.<br></p>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Isle of Man Sunset</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.<br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary display-4">Order</a></div>
+                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
                 </div>
             </div>
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/duck-periwinkle-images-for-giving-catalogue-nov-2019-676x478.png" alt="Mobirise" title="">
+                        <img src="assets/images/milan-tram-and-cyclist-website-676x451.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Milan Tram and Cyclist</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available to order soon.<br>
+                        <h4 class="card-title mbr-fonts-style display-7"><strong>Milan Tram and Cyclist</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.<br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary display-4">Order</a></div>
+                    <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
                 </div>
             </div>
 
