--- a/pricelist.html
+++ b/pricelist.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
     <!---->
     
     <!---->
