--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Melvyn Swingler Graphic Design
 Brand identity
 ">
   
-  <title>Home</title>
+  <title>Hot Toast - Home for three Creative Brands</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -67,7 +67,7 @@ Brand identity
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
 
     
 
