create github pages

--- a/moreartphotography.html
+++ b/moreartphotography.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content4 cid-rSAwI6b5E9" id="content4-2g">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content4 cid-rSAwI6b5E9" id="content4-2g">
 
     
 
