--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-secondary display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-secondary display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">Interest Sparks</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item text-secondary dropdown-toggle display-4" href="showreelgallery.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbrib-globe mbr-iconfont mbr-iconfont-btn"></span>World Wildlife Art Photography<br>for Interior Decor<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-secondary display-4" href="showreelgallery.html">Introduction</a><a class="dropdown-item text-secondary display-4" href="philippericordel.html">About Philippe Ricordel</a><a class="dropdown-item text-secondary display-4" href="moreartphotography.html">Japan and Antarctica</a></div></div></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-secondary display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">Idea Haven</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item text-secondary dropdown-toggle display-4" href="cds.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Joyful stories for<br>Children (6 - 9 years)<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-secondary display-4" href="baltimoretravels.html">Introduction</a><a class="dropdown-item text-secondary display-4" href="listen.html">Sample Clips</a><a class="dropdown-item text-secondary display-4" href="videos.html">Video Trailers</a></div></div></div></li><li class="nav-item dropdown open"><a class="nav-link link text-secondary dropdown-toggle display-4" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">Duck &amp; Periwinkle</a><div class="dropdown-menu"><a class="text-secondary dropdown-item display-4" href="duckandperiwinkle.html" aria-expanded="false"><span class="mbrib-photos mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Images for Giving <br></a><a class="text-secondary dropdown-item display-4" href="documentdesign.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Document Design Service</a><a class="text-secondary dropdown-item display-4" href="graphicdesignservice.html" aria-expanded="false"><span class="mbrib-rocket mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Graphic Design Service</a></div></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="contact.html" aria-expanded="true">Contact</a></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-secondary display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">Interest Sparks</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item text-secondary dropdown-toggle display-4" href="showreelgallery.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbrib-globe mbr-iconfont mbr-iconfont-btn"></span>World Wildlife Art Photography<br>for Interior Decor<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-secondary display-4" href="showreelgallery.html">Introduction</a><a class="dropdown-item text-secondary display-4" href="philippericordel.html">About Philippe Ricordel</a><a class="dropdown-item text-secondary display-4" href="moreartphotography.html">Japan and Antarctica</a></div></div></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-secondary display-4" href="index.html" data-toggle="dropdown-submenu" aria-expanded="false">Idea Haven</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item text-secondary dropdown-toggle display-4" href="cds.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-smile-face mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Joyful stories for<br>Children (6 - 9 years)<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-secondary display-4" href="baltimoretravels.html">Introduction</a><a class="dropdown-item text-secondary display-4" href="listen.html">Sample Clips</a><a class="dropdown-item text-secondary display-4" href="videos.html">Video Trailers</a></div></div></div></li><li class="nav-item dropdown"><a class="nav-link link text-secondary dropdown-toggle display-4" href="index.html" aria-expanded="true" data-toggle="dropdown-submenu">Duck &amp; Periwinkle</a><div class="dropdown-menu"><a class="text-secondary dropdown-item display-4" href="duckandperiwinkle.html" aria-expanded="false"><span class="mbrib-photos mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Images for Giving <br></a><a class="text-secondary dropdown-item display-4" href="documentdesign.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Document Design Service</a><a class="text-secondary dropdown-item display-4" href="graphicdesignservice.html" aria-expanded="false"><span class="mbrib-rocket mbr-iconfont mbr-iconfont-btn" style="color: rgb(7, 59, 76);"></span>Graphic Design Service</a></div></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="contact.html" aria-expanded="true">Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section form4 cid-rUnzJQUk1t mbr-parallax-background" id="form4-38">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section form4 cid-rUnzJQUk1t" id="form4-38">
 
     
 
@@ -70,13 +70,13 @@
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1194149.099737138!2d-5.692769643925838!3d54.227481449073075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48638530442e81d5%3A0xea025bbcf1f0e00d!2sIsle%20of%20Man!5e0!3m2!1sen!2suk!4v1585259520359!5m2!1sen!2suk" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
-                <h2 class="pb-3 align-left mbr-fonts-style display-2"><strong>Contact</strong></h2>
+                <h2 class="pb-3 align-left mbr-fonts-style display-1"><strong>Contact</strong></h2>
                 <div>
                     <div class="icon-block pb-3 align-left">
                         <span class="icon-block__icon">
                             <span class="mbri-letter mbr-iconfont"></span>
                         </span>
-                        <h4 class="icon-block__title align-left mbr-fonts-style display-7"><span style="font-style: normal;">Do get in touch</span><br></h4>
+                        <h4 class="icon-block__title align-left mbr-fonts-style display-5"><span style="font-style: normal;">Do get in touch</span><br></h4>
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-5"><strong>Chris Swingler
@@ -87,7 +87,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HjpEa02z+TcZ0kd6iJiuYnNglSdSkyAieDpzXXfJC2C6omjLH2tf+fjwXB/JTpcwOaEygKDBd4fePUxJFNK59gEltFMvvDSGHORQAOtZiaaDKedUZT4E6YI4FogS5axe">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="P4RyO6LX5PX0LtDABGpIATEHUN7thufkfUlmtyMlpXN6pEBRywOjrSztlUmtZ9PHKG32NNWBcZ+eqQYFeWTu8D/NrEByrRPNNSj5LYZE/J/bBckCl0MjRUqum6+Eo4S5">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for your message, I will reply as soon as I can. Kind Regards, 
 Chris 
@@ -137,10 +137,9 @@ Hot Toast</div>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
