create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Brand identity
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
 
     
 
