create github pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Brand identity
   
 </head>
 <body>
-  <section class="menu cid-rUrNzjTqMr" once="menu" id="menu2-3c">
+  <section class="menu cid-rUImTBNFyV" once="menu" id="menu2-3e">
 
     
 
@@ -71,7 +71,7 @@ Brand identity
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="header9 cid-rSEQD1aZsU" id="header9-2l">
 
     
 
