create github pages

--- a/documentdesign.html
+++ b/documentdesign.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
 
     
 
@@ -86,8 +86,9 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="row justify-content-center">
             <div class="media-container-column title col-12 col-md-10">
                 <h2 class="align-left mbr-bold mbr-white pb-3 mbr-fonts-style display-2"><br><span style="font-weight: normal;">DOCUMENT DESIGN SERVICE</span></h2>
-                <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5"><strong>For Brochures, Flyers and Websites</strong></h3>
-                <p class="mbr-text align-left mbr-white mbr-fonts-style display-7"><strong>I offer a rapid turnaround design service for your documents</strong> <br>and deliver them to you in .pdf format suitable for use online and in print
+                <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5"><strong>For Flyers, Brochures and Websites</strong></h3>
+                <p class="mbr-text align-left mbr-white mbr-fonts-style display-7"><br>I design documents for your communication needs (flyers, brochures, websites...)
+<br>so that you can be more engaging with your marketing and get more sales.<strong><br></strong><br><strong>I offer a rapid turnaround</strong>&nbsp;<br>and deliver them to you in .pdf format suitable for use online and in print
 <br>and in .png or .jpg for graphics&nbsp;</p>
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="documentdesign.html#features17-1q">SEE SAMPLES</a>
                     <a class="btn btn-white-outline display-4" href="contact.html">CONTACT CHRIS</a></div>
