create github pages

--- a/documentdesign.html
+++ b/documentdesign.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
 
     
 
@@ -132,7 +132,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/bringing-people-together-16th-april-2018-596x772.png" alt="Mobirise" title="">
+                        <img src="assets/images/bringing-people-together-16th-april-2018-new-logo-816x1056.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Newsletter Cover - using an image of a vineyard in the heart of Green Provence<br><br></h4>
