--- a/documentdesign.html
+++ b/documentdesign.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section info3 cid-rRBqB1vVSl" id="info3-1r">
 
     
 
@@ -158,7 +158,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/interest-sparks-uplifting-perspective-464x654.png" alt="Mobirise" title="">
+                        <img src="assets/images/interest-sparks-uplifting-perspective-1-816x1150.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Flyer for Philippe Ricordel's Art Photography on this website</h4>
