--- a/philippericordel.html
+++ b/philippericordel.html
@@ -76,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header3 cid-rStRCVvGn8" id="header3-27">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-rStRCVvGn8" id="header3-27">
 
     
 
@@ -97,7 +97,7 @@ s0.parentNode.insertBefore(s1,s0);
 <br>Philippe has detailed knowledge of the best places for Wildlife Photography in Brazil, Kenya, Rwanda, Norway, China, Japan, New Zealand and Antarctica.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="moreartphotography.html">SEE MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="index.html#form4-2">CONTACT US TO REQUEST BROCHURE</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="contact.html">CONTACT US TO REQUEST BROCHURE</a></div>
             </div>
         </div>
     </div>
