--- a/showreelgallery.html
+++ b/showreelgallery.html
@@ -76,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header3 cid-rRxv5G1Pi0" id="header3-1k">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header3 cid-rRxv5G1Pi0" id="header3-1k">
 
     
 
@@ -95,7 +95,7 @@ s0.parentNode.insertBefore(s1,s0);
                     
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="philippericordel.html">LEARN MORE ABOUT PHILIPPE RICORDEL</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="index.html#form4-2">CONTACT US TO REQUEST BROCHURE</a></div>
+                    <a class="btn btn-md btn-white-outline display-4" href="contact.html">CONTACT US TO REQUEST BROCHURE</a></div>
             </div>
         </div>
     </div>
