create github pages

--- a/videos.html
+++ b/videos.html
@@ -41,7 +41,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rVWBPY4cZH" once="menu" id="menu2-3n">
+  <section class="menu cid-rW3IZJ2yh6" once="menu" id="menu2-3o">
 
     
 
@@ -74,7 +74,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-section content5 cid-rHBbAuRoB0" id="content5-16">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-rHBbAuRoB0" id="content5-16">
 
     
 
