--- a/duckandperiwinkle.html
+++ b/duckandperiwinkle.html
@@ -42,7 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rVWBPY4cZH" once="menu" id="menu2-3n">
+  <section class="menu cid-rW3IZJ2yh6" once="menu" id="menu2-3o">
 
     
 
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
 
     
 
