--- a/pricelist.html
+++ b/pricelist.html
@@ -42,7 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rVWBPY4cZH" once="menu" id="menu2-3n">
+  <section class="menu cid-rW3IZJ2yh6" once="menu" id="menu2-3o">
 
     
 
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
     <!---->
     
     <!---->
