--- a/testpage.html
+++ b/testpage.html
@@ -41,7 +41,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rVWBPY4cZH" once="menu" id="menu2-3n">
+  <section class="menu cid-rW3IZJ2yh6" once="menu" id="menu2-3o">
 
     
 
@@ -74,7 +74,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section once="footers" class="cid-rUnCKsq4w6" id="footer6-3j">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rUnCKsq4w6" id="footer6-3j">
 
     
 
