--- a/duckandperiwinkle.html
+++ b/duckandperiwinkle.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
 
     
 
