create github pages

--- a/cds.html
+++ b/cds.html
@@ -74,7 +74,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="services1 cid-rQ1GZGvUov" id="services1-1a">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="services1 cid-rQ1GZGvUov" id="services1-1a">
     <!---->
     
     <!---->
