--- a/moreartphotography.html
+++ b/moreartphotography.html
@@ -43,7 +43,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rW7ChkF1Ek" once="menu" id="menu2-3q">
+  <section class="menu cid-rWprGBgF3L" once="menu" id="menu2-3y">
 
     
 
@@ -76,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section content4 cid-rSAwI6b5E9" id="content4-2g">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content4 cid-rSAwI6b5E9" id="content4-2g">
 
     
 
