--- a/pricelist.html
+++ b/pricelist.html
@@ -42,7 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rW7ChkF1Ek" once="menu" id="menu2-3q">
+  <section class="menu cid-rWprGBgF3L" once="menu" id="menu2-3y">
 
     
 
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
     <!---->
     
     <!---->
