--- a/philippericordel.html
+++ b/philippericordel.html
@@ -43,7 +43,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rW7ChkF1Ek" once="menu" id="menu2-3q">
+  <section class="menu cid-rWprGBgF3L" once="menu" id="menu2-3y">
 
     
 
@@ -76,7 +76,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header3 cid-rStRCVvGn8" id="header3-27">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header3 cid-rStRCVvGn8" id="header3-27">
 
     
 
