--- a/testpage.html
+++ b/testpage.html
@@ -41,7 +41,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!-- /Analytics -->
 
 
-  <section class="menu cid-rW7ChkF1Ek" once="menu" id="menu2-3q">
+  <section class="menu cid-rWprGBgF3L" once="menu" id="menu2-3y">
 
     
 
@@ -74,7 +74,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section once="footers" class="cid-rUnCKsq4w6" id="footer6-3j">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rUnCKsq4w6" id="footer6-3j">
 
     
 
