--- a/duckandperiwinkle.html
+++ b/duckandperiwinkle.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section content4 cid-rU3RIeLayf" id="content4-2z">
 
     
 
@@ -105,7 +105,7 @@ s0.parentNode.insertBefore(s1,s0);
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Duck at Slimbridge</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><br>Available soon.<br><br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
                 </div>
@@ -118,7 +118,7 @@ s0.parentNode.insertBefore(s1,s0);
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Isle of Man Sunset</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><br>Available soon.<br><br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
                 </div>
@@ -131,7 +131,7 @@ s0.parentNode.insertBefore(s1,s0);
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Milan Tram and Cyclist</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Pack of 10 greetings cards with envelopes<br><br>Available soon.<br>
+                        <p class="mbr-text mbr-fonts-style display-7">Pack of 5 Greeting cards/Notelets with envelopes<br><br>£10
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="order.html" class="btn btn-primary-outline display-4">Order</a></div>
