--- a/pricelist.html
+++ b/pricelist.html
@@ -75,7 +75,7 @@ s0.parentNode.insertBefore(s1,s0);
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="services6 cid-rCl93XBK7Q" id="services6-a">
     <!---->
     
     <!---->
